--- a/bruh.html
+++ b/bruh.html
@@ -10,6 +10,8 @@
 		<script src="aabb.js" type="text/javascript"></script>
 		<script src="circle.js" type="text/javascript"></script>
 		<script src="spacepartition.js" type="text/javascript"></script>
+		<script src="wires.js" type="text/javascript"></script>
+		<script src="speechbubble.js" type="text/javascript"></script>
 		<script>
 // -10 wtf			
 // -2 bruh
@@ -71,6 +73,7 @@
 // Cultural and Social Context: Understanding cultural references and social context is crucial for some jokes. Humor that taps into shared cultural knowledge can be more effective within specific groups.
 const WORLD_WIDTH = 800;
 const WORLD_HEIGHT = 600;
+const TARGET_FPS = 30;
 let DRAWMATH = false;
 var APP;
 var TEXTBUBBLES = [];
@@ -88,7 +91,7 @@ var collisionHappening = function (agent) {
 	for (let i = 0; i < collidingAgents.length; i++) {
 		let a = collidingAgents[i];
 		if (a == agent) { continue; }
-		let collisionData = Agent.collision(agent, a);
+		let collisionData = Agent.computePenetration(agent, a);
 		if (collisionData != null) {
 			if (listOfCollisions == null) {
 				listOfCollisions = [collisionData];
@@ -110,6 +113,9 @@ function mainLoop() {
 	APP.processInput();
 	APP.update();
 	APP.drawGame();
+	// TODO implement logic that queries the average framerate over the last 10 frames. then every 10 frames,
+		// if the frame rate is too low, decrease the target framedelay by one
+		// if the frame rate is too high, increase the target framedelay by one
 	setTimeout(mainLoop, APP.frameDelay);
 }
 
@@ -122,7 +128,7 @@ class App {
 		this.now = Date.now();
 		console.log("creating " + this.now);
 		this.then = Date.now();
-		this.targetFps = 30;
+		this.targetFps = TARGET_FPS;
 		this.frameDelay = 1000 / this.targetFps;
 		this.mouse = new V2(0,0);
 		this.canvas.width = WORLD_WIDTH;
@@ -192,6 +198,9 @@ class App {
 			}
 		}
 		SpeechBubble.drawSpeechBubbles(this.ctx, TEXTBUBBLES);
+		this.ctx.fillStyle = "#222";
+		this.ctx.textAlign = "left";
+		this.ctx.fillText("FPS "+Math.floor(1000/this.deltaTime), 10, this.canvas.height-10);
 	}
 
 	static drawPartitionReferencingAgent(ctx, partition, agent) {
@@ -264,55 +273,7 @@ class App {
 	}
 };
 
-class Wire {
-	constructor() { }
-	draw(ctx) {
-		this.drawAlgorithm(ctx);
-	}
-	drawLine(ctx) {
-		ctx.strokeStyle = this.color;
-		ctx.lineWidth = this.thickness;
-		ctx.beginPath();
-		ctx.moveTo(this.start.x, this.start.y);
-		ctx.lineTo(this.end.x, this.end.y);
-		ctx.stroke();
-	}
-	drawCircle(ctx) {
-		ctx.strokeStyle = this.color;
-		ctx.lineWidth = this.thickness;
-		ctx.beginPath();
-		ctx.arc(this.position.x, this.position.y, this.radius, 0, 2 * Math.PI);
-		ctx.stroke();
-	}
-	line(start, end, color = "black", thickness = 1) {
-		this.start = start; this.end = end; this.color = color; this.thickness = thickness;
-		this.drawAlgorithm = this.drawLine;
-	}
-	circle(center, radius, color = "black", thickness = 1) {
-		this.position = center; this.radius = radius; this.color = color; this.thickness = thickness;
-		this.drawAlgorithm = this.drawCircle;
-	}
-}
 
-class Wires {
-	constructor() {
-		this.wires = {};
-	}
-	make(name) {
-		let found = this.wires[name];
-		if (found) { return found; }
-		found = new Wire()
-		found.name = name;
-		this.wires[name] = found;
-		return found;
-	}
-	draw(ctx) {
-		for (const [key, value] of Object.entries(this.wires)) {
-			if (key.hidden) { continue; }
-			value.draw(ctx);
-		}
-	}
-}
 var WIRES = new Wires();
 var DOT_TEST = 0;
 
@@ -593,7 +554,7 @@ class Agent {
 		}
 	}
 
-	static collision(agent0, agent1) {
+	static computePenetration(agent0, agent1) {
 		let sumRadius = agent0.radius + agent1.radius;
 		let delta = V2.diff(agent1.position, agent0.position);
 		let distance = delta.magnitude();
@@ -676,142 +637,6 @@ function keyDownInterrupt(e) {
 	}
 }
 
-class SpeechBubble {
-	static circle32 = [];
-	constructor(text, getSourcePointFunc, getBubblePointFunc, lineColor, duration) {
-		this.text = text;
-		this.getSourcePointFunc = getSourcePointFunc;
-		this.getBubblePointFunc = getBubblePointFunc;
-		this.lineColor = lineColor;
-		this.duration = duration;
-		if (SpeechBubble.circle32.length == 0) {
-			for (let i = 0; i < Math.PI * 2; i += Math.PI/16) {
-				SpeechBubble.circle32.push(new V2(Math.cos(i)/2, Math.sin(i)/2));
-			}
-		}
-	}
-
-	static updateSpeechBubbles(deltaTime, bubbles) {
-		for (let i = bubbles.length - 1; i >= 0; --i) {
-			let bubble = bubbles[i];
-			bubble.update(deltaTime);
-			if (bubble.done) {
-				bubbles.splice(i, 1);
-			}
-		}
-	}
-
-	static drawSpeechBubbles(ctx, bubbles) {
-		for (let i = 0; i < bubbles.length; ++i) {
-			let bubble = bubbles[i];
-			bubble.draw(ctx);
-		}
-	}
-
-	update(deltaTime) {
-		this.duration -= deltaTIme;
-		if (this.duration <= 0) {
-			this.done = true;
-		}
-	}
-
-	draw(ctx) {
-		let speechSource = this.getSourcePointFunc();
-		let center = this.getBubblePointFunc();
-		this.speechBubble(ctx, this.text, center, speechSource, this.lineColor);
-	}
-
-	speechBubble(ctx, text, position, speechSource, bubbleLine = '#888', bubbleColor = '#fffa', textColor = '#222') {
-		ctx.font = "12px Arial";
-		ctx.textAlign = "center";
-		let metrics = ctx.measureText(text);
-		let line = text.split("\n");
-		let totalRect = new V2(0,0);
-		let lineRects = [];
-		let lineSpacing = 5;
-		for(let i = 0; i < line.length; i++) {
-			if (i > 0) {
-				totalRect.y += lineSpacing;
-			}
-			let lineSize = this.getTextRectSize(ctx, line[i]);
-			lineRects.push(lineSize);
-			if (totalRect.x < lineSize.x) {
-				totalRect.x = lineSize.x;
-			}
-			totalRect.y += lineSize.y;
-		}
-		let p = new V2(position);
-		let extraSize = V2.prod(totalRect, 0.125);
-		totalRect.add(extraSize);
-		ctx.strokeStyle = bubbleLine;
-		ctx.fillStyle = bubbleColor;
-		this.drawOvalWordBubble(ctx, p, totalRect, speechSource);
-		p.y += extraSize.y/2;
-		let cursor = V2.diff(p, new V2(0, totalRect.y/2));
-		const descentOffset = metrics.fontBoundingBoxDescent/2;
-		for (let i = 0; i < line.length; ++i) {
-			let lineSize = lineRects[i];//getTextRectSize(ctx, line[i]);
-			// ctx.strokeStyle = '#fff4';
-			// ctx.fillStyle = "#fff";
-			// ctx.beginPath();
-			// ctx.rect(cursor.x - lineSize.x/2, cursor.y + descentOffset, lineSize.x, lineSize.y);
-			// ctx.fill();
-			// ctx.stroke();
-			ctx.fillStyle = textColor;
-			ctx.fillText(line[i], cursor.x, cursor.y + lineSize.y);
-			cursor.y += lineSize.y + lineSpacing;
-		}
-	}
-
-	getTextRectSize(ctx, text) {
-		let metrics = ctx.measureText(text);
-		let fontHeight = metrics.fontBoundingBoxAscent + metrics.fontBoundingBoxDescent;
-		let actualHeight = metrics.actualBoundingBoxAscent + metrics.actualBoundingBoxDescent;
-		let actualWidth = ctx.measureText(text).width;
-		return new V2(actualWidth, actualHeight);
-	}
-
-
-	drawOvalWordBubble(ctx, center, size, source, precomputedVerts) {
-		if (!precomputedVerts) {
-			precomputedVerts = this.calculateOvalWordBubble(center, size, source);
-		}
-		ctx.beginPath();
-		let vert = precomputedVerts[0];
-		ctx.moveTo(vert.x, vert.y)
-		for (let i = 1; i < precomputedVerts.length; i++) {
-			vert = precomputedVerts[i];
-			ctx.lineTo(vert.x, vert.y);
-		}
-		ctx.fill();
-		ctx.stroke();
-	}
-
-	calculateOvalWordBubble(center, size, source) {
-		let points = [];
-		let last = circle32.length-1;
-		let x = circle32[last].x * size.x;
-		let y = circle32[last].y * size.y;
-		points.push(new V2(x,y));
-		let lastPoint = new V2(x,y);
-		let thisPoint = new V2(x,y);
-		let toSource = V2.diff(source, center);
-		let lastSign = V2.sign(toSource, thisPoint) > 0;
-		for(let i = 0; i < 32; ++i) {
-			x = circle32[i].x * size.x;
-			y = circle32[i].y * size.y;
-			thisPoint.set(x,y);
-			let thisSign = V2.sign(toSource, thisPoint) > 0;
-			if (lastSign != thisSign && V2.dot(thisPoint, toSource) > 0) {
-				points.push(source);
-			}
-			lastSign = thisSign;
-			points.push(new V2(x + center.x, y + center.y));
-			lastPoint.set(x, y);
-		}
-		return points;
-	}
-}
 
 function mouseDownInterrupt(e) {
 	APP.updateMouseDownInput(e || window.event);
