--- a/bruh.html
+++ b/bruh.html
@@ -12,65 +12,8 @@
 		<script src="spacepartition.js" type="text/javascript"></script>
 		<script src="wires.js" type="text/javascript"></script>
 		<script src="speechbubble.js" type="text/javascript"></script>
+		<script src="sillywords.js" type="text/javascript"></script>
 		<script>
-// -10 wtf			
-// -2 bruh
-// -1 kek
-// 0 ...
-// 1 heh
-// 2 hah
-// 3 ha ha
-// 4 haha
-// 5 lol
-// 6 haha lol
-// 7 ahaha
-// 8 rofl
-// 9 lololol
-// 10 omgroflhahaha
-
-// 0 ...
-// 5 that's funny.
-// 8 bro that's really good.
-// 10 dude you are hilarious.
-
-// presentation/delivery - confidence, tone of voice, consistency and legibility of speech
-// categoryA - poitics
-// categoryB - sex
-// categoryC - relationships
-// categoryD - prejudice and other cognitive biases
-// prophecy - saying what other people wish they had thought of
-
-// comedian type
-// * coincidental - the coincidental comedian sees something, reads something or hears something and turns it into a joke in that moment.
-// * architect
-// * humorost
-
-// laughter triggers:
-// - Surprise
-//     Surprise or Twist: Many jokes rely on surprising the audience with an unexpected punchline or twist. The element of surprise can catch people off guard and generate laughter.
-// - Superiority
-//     Laughing at the misfortune of others
-// - Embarrassment
-//     make the audience feel embarassed and laugh as a coping mechanism
-// - Incongruity
-//     Incongruity: Jokes often involve bringing together seemingly unrelated or incompatible elements, creating a contrast that triggers laughter. The unexpected combination can be funny.
-// - Recognition
-// - Release
-//     At least nobody died.
-// - Configurational
-// - Ambivalence
-// - Coincidence
-// - Benign Violations
-//     it's bad but harmless. Tragedy + Time
-
-// Timing: Timing is crucial in comedy. The delivery of a joke, including pauses and pacing, can significantly impact its comedic effect. Well-timed punchlines tend to be funnier.
-// Relatability: Jokes that touch on shared experiences or common situations are often funnier because people can relate to them. Understanding the context allows individuals to connect with the humor.
-// Wordplay and Puns: Clever wordplay, puns, and linguistic humor can be amusing. Playing with language, double meanings, or creating unexpected connections between words can elicit laughter.
-// Exaggeration: Overstating or exaggerating situations, characteristics, or behaviors can be humorous. It often involves taking something to an extreme, making it absurd and comical.
-// Observational Comedy: Comedians often find humor in everyday situations by providing a unique or humorous perspective on common experiences, highlighting the absurdities in daily life.
-// Satire and Irony: Satirical humor involves mocking or ridiculing people, institutions, or societal norms. Irony, where there is a contrast between expectations and reality, can also be comedic.
-// Self-Deprecation: Jokes that involve poking fun at oneself or one's own flaws can be relatable and endearing. It creates a sense of humility that resonates with audiences.
-// Cultural and Social Context: Understanding cultural references and social context is crucial for some jokes. Humor that taps into shared cultural knowledge can be more effective within specific groups.
 const WORLD_WIDTH = 800;
 const WORLD_HEIGHT = 600;
 const TARGET_FPS = 30;
@@ -658,78 +601,6 @@ agents = [
 	// new Agent("Red", new V2(100,100), 10, 200, 20, 1, 10, 'orange', 'red', 0.25),
 	// new Agent("gray", new V2(40,300), 8, 100, 50),
 ];
-
-const SILLY_NAMES = ["bitty","bore","bug","bum", "dinq", "fuzz", "goo", "gum", "hick", "pea", "shoo", "slug", "sniff", "stink", "trash", "worm", "zoo", "fig", "chew", "beanie", "mad", "egg", "wee", "lick", "fart", "buzz", "fluff", "poop", "barf", "rat", "bobo", "booger", "fudge", "doozy", "hippy", "jiggy", "dink", "oink", "roach", "snot", "sock", "toot", "pie", "wiggle", "spotty", "hobo", "woof", "noodle", "droopy", "pants", "moo", "buns", "kins", "face", "ball", "rider", "worth", "ton"];
-function getRandomInt(max) { return Math.floor(Math.random() * max); }
-function getRandomChoice(choices) { return choices[getRandomInt(choices.length)]; }
-function randomNameBit() {
-	return SILLY_NAMES[getRandomInt(SILLY_NAMES.length)];
-}
-function generateSillyName() {
-	return randomNameBit()+" "+randomNameBit()+randomNameBit();
-}
-var agentDictionary = {};
-function generateUniqueSillyName(){
-	let sillyName = generateSillyName();
-	let guard = 0;
-	do {
-		if (++guard > 100) { throw "too many silly names? "+Object.keys(agentDictionary).length;}
-		sillyName = generateSillyName();
-	} while (agentDictionary[sillyName] !== undefined);
-	agentDictionary[sillyName] = 1;
-	return sillyName;
-}
-
-function createSillyWordArray(segmentCount) {
-	let array = [];
-	for (let i = 0; i < segmentCount; i++) {
-		array[i] = getRandomInt(SILLY_NAMES.length);
-	}
-	let index = 0;
-	while(index < array.length) {
-		let segmentCountForWord = 1 + getRandomInt(2);
-		index += segmentCountForWord;
-		if (index < array.length) {
-			array.splice(index, 0, -1);
-			++index;
-		}
-	}
-	return array;
-}
-
-function compileSillyWordArrayToText(sillyWordArray) {
-	let text = "";
-	let needForPause = 0;
-	let minIdeasPerPause = 3;
-	let maxIdeasPerPause = 5;
-	let ideaCountDelta = maxIdeasPerPause - minIdeasPerPause;
-	for(let i=0; i < sillyWordArray.length; i++) {
-		let wordIndex = sillyWordArray[i];
-		if (wordIndex >= 0) {
-			let wordSegment = SILLY_NAMES[wordIndex];
-			text += wordSegment;
-			if (i+1 >= sillyWordArray.length) {
-				text += getRandomChoice(['!','.','?']);
-			}
-		} else {
-			let ideaWeight = 1 / (minIdeasPerPause + getRandomInt(ideaCountDelta));
-			needForPause += ideaWeight;
-			if (needForPause >= 1) {
-				//console.log(needForPause-1 + " vs " + (1/maxIdeasPerPause));
-				if (needForPause-1 > (1/maxIdeasPerPause)) {
-					text += "!";
-				} else {
-					text += getRandomChoice([',','.','?']);
-				}
-				text += "\n";
-				needForPause = 0;
-			} else {
-				text += " ";
-			}
-		}
-	}
-	return text;
-}
 
 for(let i = 0; i < 130; ++i) {
 	let sillyName = generateUniqueSillyName();
