--- a/bruh.html
+++ b/bruh.html
@@ -94,11 +94,11 @@ class App {
 		targetFps += 0.5;
 		if (this.__delaysIndex >= this.__delays.length) {
 			this.__delaysIndex = 0;
-			let actualFps = 1000/this.__avgDelay();
-			if (actualFps < targetFps) {
-				this.frameDelay--;
-			} else if (actualFps > targetFps) {
-				this.frameDelay++;
+			this.actualFps = 1000/this.__avgDelay();
+			if (this.actualFps < targetFps) {
+				this.frameDelay-= 1;
+			} else if (this.actualFps > targetFps) {
+				this.frameDelay+= 1;
 			}
 		}
 		this.__delays[this.__delaysIndex++] = this.deltaTime;
@@ -108,6 +108,7 @@ class App {
 		const ESCAPE = 27;
 		if (e.keyCode === ESCAPE) {
 			this.clearScreen = true;
+			DRAWMATH = !DRAWMATH;
 		} else {
 			console.log("key: " + e.keyCode)
 		}
@@ -195,7 +196,8 @@ class App {
 		SpeechBubble.drawSpeechBubbles(this.ctx, TEXTBUBBLES);
 		this.ctx.fillStyle = "#222";
 		this.ctx.textAlign = "left";
-		this.ctx.fillText("FPS "+Math.floor(1000/this.deltaTime), 10, this.canvas.height-10);
+		let fpsValue = Math.floor((this.actualFps !== undefined)? this.actualFps : (1000/this.deltaTime));
+		this.ctx.fillText("FPS "+fpsValue, 10, this.canvas.height-10);
 	}
 
 	static drawPartitionReferencingAgent(ctx, partition, agent) {
@@ -626,16 +628,6 @@ function mouseMoveInterrupt(e) {
 
 function keyDownInterrupt(e) {
 	APP.updateKeyInput(e || window.event);
-	if (!e) { e = window.event; }
-	if (e.keyCode === 187) { // =
-		testP += 1/8;
-	}
-	if (e.keyCode === 189) { // -
-		testP -= 1/8;
-	}
-	if (e.keyCode === 27) { 
-		DRAWMATH = !DRAWMATH;
-	}
 }
 
 
