--- a/sportsball_0.html
+++ b/sportsball_0.html
@@ -5,63 +5,35 @@
 		body { margin:0; padding:0; }
 	</style>
 	</head>
-	<body onload="mainLoop()" onmousemove="mouseMoveInterrupt()" onkeydown="keyDownInterrupt()" onmousedown="mouseDownInterrupt()">
+	<body onmousemove="mouseMoveInterrupt()" onkeydown="keyDownInterrupt()" onmousedown="mouseDownInterrupt()" onload="startGame()">
 		<script src="v2.js" type="text/javascript"></script>
 		<script src="circle.js" type="text/javascript"></script>
 		<script>
-const WORLD_WIDTH = 800;
-const WORLD_HEIGHT = 600;
-const TARGET_FPS = 30;
+const WORLD_WIDTH = 800, WORLD_HEIGHT = 600, TARGET_FPS = 30;
 var APP;
-var agents;
+var agents = [];
 
-var collisionHappening = function (agent) {
-	let listOfCollisions = null;
-	let agentCircle = Agent.getCircle(agent);
-	let collidingAgents = getCollisions(agentCircle);
-	if (!collidingAgents || collidingAgents.length == 0) {
-		return null;
-	}
-	let collisionHappening = false;
-	for (let i = 0; i < collidingAgents.length; i++) {
-		let a = collidingAgents[i];
-		let agentCollidingWithSelf = a == agent;
-		if (agentCollidingWithSelf) { continue; }
-		let collisionData = Agent.computePenetration(agent, a);
-		if (collisionData != null) {
-			if (listOfCollisions == null) {
-				listOfCollisions = [collisionData];
-			} else {
-				listOfCollisions.push(collisionData);
-			}
-		}
-	}
-	return listOfCollisions;
+function mouseMoveInterrupt(e) {
+	APP.updateMousePosition(e || window.event);
 }
 
-function getCollisions(circle) {
-	let collisions = [];
-	for(let i = 0; i < agents.length; i++) {
-		let agent = agents[i];
-		let distance = V2.distance(circle.center, agent.position);
-		let minDistance = circle.radius + agent.radius;
-		if (distance < minDistance) {
-			collisions.push(agent);
-		}
-	}
-	return collisions;
+function keyDownInterrupt(e) {
+	APP.updateKeyInput(e || window.event);
 }
 
-function forEachAgent(whatToDo) {
-	for (let i = 0; i < agents.length; i++) {
-		whatToDo(agents[i]);
-	}
+function mouseDownInterrupt(e) {
+	APP.updateMouseDownInput(e || window.event);
+}
+
+function startGame() {
+	APP = new App();
+	mainLoop();
 }
 
 function mainLoop() {
+	APP.drawGame();
 	APP.processInput();
 	APP.update();
-	APP.drawGame();
 	setTimeout(mainLoop, APP.frameDelay);
 }
 
@@ -72,12 +44,20 @@ class App {
 		this.then = Date.now();
 		this.targetFps = TARGET_FPS;
 		this.frameDelay = 1000 / this.targetFps;
+		this.deltaTime = this.frameDelay / 1000;
 		this.mouse = new V2(0,0);
 		this.canvas.width = WORLD_WIDTH;
 		this.canvas.height = WORLD_HEIGHT;
 		this.context = this.canvas.getContext("2d");
 		document.body.insertBefore(this.canvas, document.body.childNodes[0]);
 		document.onkeydown = this.userkey;
+	}
+
+	updateMousePosition(e) {
+		if (!e) {
+			return;
+		}
+		this.mouse.set(e.clientX, e.clientY);
 	}
 
 	updateKeyInput(e) {
@@ -87,32 +67,10 @@ class App {
 		} else {
 			console.log("key: " + e.keyCode)
 		}
-	};
-
-	updateMousePosition(e) {
-		if (!e) {
-			return;
-		}
-		this.mouse.set(e.clientX, e.clientY);
 	}
 
 	updateMouseDownInput(e) {
 		this.updateMousePosition(e);
-	}
-
-	processInput() {
-		if (this.mouse) {
-			let player = agents[0];
-			let playerDelta = V2.diff(this.mouse, player.position);
-			let desiredVelocity = playerDelta;
-			let magnitude = playerDelta.magnitude();
-			const maxSpeed = 100;
-			if (magnitude > maxSpeed) {
-				let direction = V2.quotient(playerDelta, magnitude);
-				desiredVelocity = V2.prod(direction, 100);
-			}
-			player.velocity = desiredVelocity;
-		}
 	}
 
 	drawGame() {
@@ -121,53 +79,66 @@ class App {
 		forEachAgent(a => a.draw(this.ctx));
 	}
 
+	processInput() {
+		if (this.mouse) {
+			let player = agents[0];
+			let playerDelta = V2.diff(this.mouse, player.position);
+			let desiredVelocity = playerDelta;
+			let magnitude = playerDelta.magnitude();
+			let maxSpeed = player.speed;
+			let direction = V2.quotient(playerDelta, magnitude);
+			let currentSpeed = player.velocity.magnitude();
+			if (magnitude > maxSpeed) {
+				desiredVelocity = V2.prod(direction, maxSpeed);
+			}
+			const useAccelerationForce = false;
+			if (useAccelerationForce) {
+				let endOfVelocityLine = V2.sum(player.position, player.velocity);
+				this.drawLine(player.position, endOfVelocityLine, "blue");
+				this.drawLine(player.position, V2.sum(player.position, desiredVelocity), "green");
+				let differenceInVelocities = V2.diff(desiredVelocity, player.velocity);
+				let steeringDirection = differenceInVelocities.normalized();
+				this.drawLine(endOfVelocityLine, V2.sum(endOfVelocityLine, V2.prod(steeringDirection, player.acceleration)), "magenta");
+				let accelerationThisFrame = V2.prod(steeringDirection, player.acceleration * this.deltaTime);
+				player.velocity.add(accelerationThisFrame);
+			} else {
+				player.velocity.set(desiredVelocity);
+			}
+		}
+	}
+
+	drawLine(a, b, color) {
+		if (!this.ctx) {
+			return;
+		}
+		this.ctx.lineWidth = 1;
+		this.ctx.beginPath();
+		this.ctx.moveTo(a.x, a.y);
+		this.ctx.lineTo(b.x, b.y);
+		if (color) {
+			this.ctx.strokeStyle = color;
+		}
+		this.ctx.stroke();
+	}
+
 	update() {
 		this.updateTiming();
 		let timeHasPassed = this.deltaTime > 0;
 		if (timeHasPassed) { 
-			let deltaTime = this.deltaTime / 1000;
-			forEachAgent(a => a.update(deltaTime));
-			forEachAgent(a => a.updateApplyPhysics(deltaTime));
-			this.enforceCollisionDetection();
-		}
-	}
-
-	enforceCollisionDetection() {
-		let collisionsPerAgent = {};
-		forEachAgent(a => {
-			if (!a) { return; }
-			let collisions = collisionHappening(a);
-			if (collisions != null) {
-				let collisionsHappeningToAgent = collisionsPerAgent[a.name];
-				if (!collisionsHappeningToAgent) {
-					collisionsHappeningToAgent = [];
-				}
-				for (let i = 0; i < collisions.length; i++) {
-					collisionsHappeningToAgent.push(collisions[i]);
-				}
-				collisionsPerAgent[a.name] = collisionsHappeningToAgent;
-			}
-		});
-		for (let agentname in collisionsPerAgent) {
-			let collisions = collisionsPerAgent[agentname];
-			let collisionAdjustment = new V2(0,0);
-			for(let i = 0; i < collisions.length; i++) {
-				let collision = collisions[i];
-				collisionAdjustment.add(collision.resolution[0]);
-			}
-			let agent = collisions[0].agent[0];
-			agent.position.add(collisionAdjustment);
+			forEachAgent(a => a.update(this.deltaTime));
+			forEachAgent(a => a.updateApplyPhysics(this.deltaTime));
+			enforceCollisionDetectionForAllAgents();
 		}
 	}
 
 	updateTiming() {
 		this.now = Date.now();
-		let deltaTime = this.now - this.then;
-		if (deltaTime) {
-			if (deltaTime > 1000) {
-				deltaTime = 1000;
+		let deltaTimeMs = this.now - this.then;
+		if (deltaTimeMs) {
+			if (deltaTimeMs > 1000) {
+				deltaTimeMs = 1000;
 			}
-			this.deltaTime = deltaTime;
+			this.deltaTime = deltaTimeMs / 1000;
 		}
 		this.then = this.now;
 	}
@@ -179,6 +150,7 @@ class App {
 
 class Agent {
 	static getCircle(agent) { return new Circle(agent.position, agent.radius); }
+
 	constructor(name, position, radius, speed, acceleration, internalClock = 3, mass = 1, fillColor = 'gray', strokeColor = 'black', borderThickness = 0.25) {
 		this.name = name;
 		this.position = position;
@@ -204,10 +176,6 @@ class Agent {
 			ctx.fill();
 		}
 		ctx.stroke();
-	}
-
-	contains(point) {
-		return V2.distance(this.position, point) <= this.radius;
 	}
 
 	update(deltaTime) {
@@ -244,38 +212,93 @@ class Agent {
 	}
 };
 
-APP = new App();
-agents = [];
+function enforceCollisionDetectionForAllAgents() {
+	let collisionsPerAgent = {};
+	forEachAgent(a => {
+		if (!a) { return; }
+		let collisions = getCollisionsHappeningToAgent(a);
+		if (collisions != null) {
+			let collisionsHappeningToAgent = collisionsPerAgent[a.name];
+			if (!collisionsHappeningToAgent) {
+				collisionsHappeningToAgent = [];
+			}
+			for (let i = 0; i < collisions.length; i++) {
+				collisionsHappeningToAgent.push(collisions[i]);
+			}
+			collisionsPerAgent[a.name] = collisionsHappeningToAgent;
+		}
+	});
+	for (let agentname in collisionsPerAgent) {
+		let collisions = collisionsPerAgent[agentname];
+		let collisionAdjustment = new V2(0,0);
+		for(let i = 0; i < collisions.length; i++) {
+			let collision = collisions[i];
+			collisionAdjustment.add(collision.resolution[0]);
+		}
+		let agent = collisions[0].agent[0];
+		agent.position.add(collisionAdjustment);
+	}
+}
+
+function forEachAgent(whatToDo) {
+	for (let i = 0; i < agents.length; i++) {
+		whatToDo(agents[i]);
+	}
+}
+
+function getCollisionsHappeningToAgent(agent) {
+	let listOfCollisions = null;
+	let agentCircle = Agent.getCircle(agent);
+	let collidingAgents = findAgentsOverlapping(agentCircle);
+	if (!collidingAgents || collidingAgents.length == 0) {
+		return null;
+	}
+	for (let i = 0; i < collidingAgents.length; i++) {
+		let collidingAgent = collidingAgents[i];
+		let agentCollidingWithSelf = collidingAgent == agent;
+		if (agentCollidingWithSelf) { continue; }
+		let collisionData = Agent.computePenetration(agent, collidingAgent);
+		if (collisionData != null) {
+			if (listOfCollisions == null) {
+				listOfCollisions = [collisionData];
+			} else {
+				listOfCollisions.push(collisionData);
+			}
+		}
+	}
+	return listOfCollisions;
+}
+
+function findAgentsOverlapping(circle) {
+	let collisions = [];
+	for(let i = 0; i < agents.length; i++) {
+		let agent = agents[i];
+		let distance = V2.distance(circle.center, agent.position);
+		let minDistance = circle.radius + agent.radius;
+		if (distance < minDistance) {
+			collisions.push(agent);
+		}
+	}
+	return collisions;
+}
+
+function randomColor() { return "#" + Math.floor(Math.random()*16777215).toString(16); }
 
 (function generateAgents() {
-	function randomColor() { return Math.floor(Math.random()*16777215).toString(16); }
-for(let i = 0; i < 130; ++i) {
-	let name = "agent"+i;
-	let position = new V2(Math.random()*WORLD_WIDTH, Math.random()*WORLD_HEIGHT);
-	let radius = 5 + 15 * Math.random();
-	let speed = 5 + 95 * Math.random();
-	let acceleration = 5 + 95 * Math.random();
-	let mass = 1 + 100 * Math.random();
-	let fillColor = "#" + randomColor();
-	let strokeColor = "#" + randomColor();
-	let internalClock = 2 + 8 * Math.random();
-	let agent = new Agent(name, position, radius, speed, acceleration, internalClock, mass, fillColor, strokeColor);
-	agents.push(agent);
-}
+	for(let i = 0; i < 130; ++i) {
+		let name = "agent"+i;
+		let position = new V2(Math.random()*WORLD_WIDTH, Math.random()*WORLD_HEIGHT);
+		let radius = 5 + 15 * Math.random();
+		let speed = 5 + 95 * Math.random();
+		let acceleration = 5 + 95 * Math.random();
+		let mass = 1 + 100 * Math.random();
+		let fillColor = randomColor();
+		let strokeColor = randomColor();
+		let internalClock = 2 + 8 * Math.random();
+		let agent = new Agent(name, position, radius, speed, acceleration, internalClock, mass, fillColor, strokeColor);
+		agents.push(agent);
+	}
 })();
-
-function mouseMoveInterrupt(e) {
-	APP.updateMousePosition(e || window.event);
-}
-
-function keyDownInterrupt(e) {
-	APP.updateKeyInput(e || window.event);
-}
-
-
-function mouseDownInterrupt(e) {
-	APP.updateMouseDownInput(e || window.event);
-}
 		</script>
 	</body>
 </html>
